mediaMicroservices/k8s-yaml/cast-info-memcached.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cast-info-memcached
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: cast-info-memcached
spec:
  ports:
  - port: 11211
  selector:
    death-star-project: media-microsvc
    app-name: cast-info-memcached
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: cast-info-memcached
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: cast-info-memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: cast-info-memcached
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: cast-info-memcached
      name: cast-info-memcached
    spec:
      containers:
      - name: cast-info-memcached
        image: poanpan/memcached:v1
        resources: 
          requests: 
            cpu: "6m"
            memory: "6Mi"
      restartPolicy: Always
      # schedulerName: poseidon
