mediaMicroservices/k8s-yaml/cast-info-mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cast-info-mongodb
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: cast-info-mongodb
spec:
  ports:
  - port: 27017
  selector:
    death-star-project: media-microsvc
    app-name: cast-info-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: cast-info-mongodb
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: cast-info-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: cast-info-mongodb
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: cast-info-mongodb
        INPUT: cast-info-service
      name: cast-info-mongodb
    spec:
      containers:
      - name: cast-info-mongodb
        image: poanpan/mongo:v1
        resources: 
          requests: 
            cpu: "150m"
            memory: "140Mi"
      restartPolicy: Always
      # schedulerName: poseidon
