mediaMicroservices/k8s-yaml/cast-info-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cast-info-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: cast-info-service
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: media-microsvc
    app-name: cast-info-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-info-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: cast-info-service
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: cast-info-service
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: cast-info-service
        OUTPUT: cast-info-mongodb
        INPUT: nginx-web-server
      name: cast-info-service
    spec:
      containers:
      - name: cast-info-service
        image: poanpan/media-microservices:v1
        command: ["CastInfoService"]
        resources: 
          requests: 
            cpu: "100m"
            memory: "25Mi"
      restartPolicy: Always
      # schedulerName: poseidon
