mediaMicroservices/k8s-yaml/jaeger.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-out
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: jaeger
spec:
  type: NodePort
  ports:
  - port: 16686
    targetPort: 16686
  selector:
    death-star-project: media-microsvc
    app-name: jaeger
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: jaeger
spec:
  ports:
  - port: 5775
    name: udp1
    protocol: UDP
  - port: 5778
    name: tcp1
  - port: 6831
    name: udp2
    protocol: UDP
  - port: 6832
    name: udp3
    protocol: UDP
  - port: 14250
    name: tcp2
  - port: 14268
    name: tcp3
  selector:
    death-star-project: media-microsvc
    app-name: jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: jaeger
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: jaeger
      name: jaeger
    spec:
      containers:
      - name: jaeger
        image: poanpan/jaegertracing:v1
        ports: 
        - containerPort: 16686
        resources: 
          requests: 
            cpu: "500m"
            memory: "2Gi"
      restartPolicy: Always
      # schedulerName: poseidon
