mediaMicroservices/k8s-yaml/movie-id-memcached.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: movie-id-memcached
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: movie-id-memcached
spec:
  ports:
  - port: 11211
  selector:
    death-star-project: media-microsvc
    app-name: movie-id-memcached
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-id-memcached
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: movie-id-memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: movie-id-memcached
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: movie-id-memcached
        INPUT: movie-id-service
      name: movie-id-memcached
    spec:
      containers:
      - name: movie-id-memcached
        image: poanpan/memcached:v1
        resources: 
          requests: 
            cpu: "80m"
            memory: "14Mi"
      restartPolicy: Always
      # schedulerName: poseidon
