mediaMicroservices/k8s-yaml/movie-id-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: movie-id-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: movie-id-service
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: media-microsvc
    app-name: movie-id-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: movie-id-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: movie-id-service
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: movie-id-service
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: movie-id-service
        OUTPUT1: rating-service
        OUTPUT2: movie-id-mongodb
        OUTPUT3: compose-review-service
        OUTPUT4: movie-id-memcached
        INPUT: nginx-web-server
      name: movie-id-service
    spec:
      containers:
      - name: movie-id-service
        image: poanpan/media-microservices-local-jaeger:v0.0.1
        command: ["MovieIdService"]
        resources: 
          requests: 
            cpu: "600m"
            memory: "22Mi"
      restartPolicy: Always
      # schedulerName: poseidon
