mediaMicroservices/k8s-yaml/movie-info-memcached.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: movie-info-memcached
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: movie-info-memcached
spec:
  ports:
  - port: 11211
  selector:
    death-star-project: media-microsvc
    app-name: movie-info-memcached
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-info-memcached
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: movie-info-memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: movie-info-memcached
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: movie-info-memcached
      name: movie-info-memcached
    spec:
      containers:
      - name: movie-info-memcached
        image: poanpan/memcached:v1
      restartPolicy: Always
