mediaMicroservices/k8s-yaml/movie-review-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: movie-review-redis
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: movie-review-redis
spec:
  ports:
  - port: 6379
  selector:
    death-star-project: media-microsvc
    app-name: movie-review-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
    #annotations:
    #"sidecar.jaegertracing.io/inject": "true"
  name: movie-review-redis
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: movie-review-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: movie-review-redis
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: movie-review-redis
        INPUT: movie-review-service
      name: movie-review-redis
    spec:
      containers:
      - name: movie-review-redis
        image: redis:alpine
        resources: 
          requests: 
            cpu: "50m"
            memory: "16Mi"
      restartPolicy: Always
      # schedulerName: poseidon
