mediaMicroservices/k8s-yaml/movie-review-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: movie-review-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: movie-review-service
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: media-microsvc
    app-name: movie-review-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-review-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: movie-review-service
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: movie-review-service
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: movie-review-service
        OUTPUT1: movie-review-redis
        OUTPUT2: movie-review-mongodb
        INPUT: compose-review-service
      name: movie-review-service
    spec:
      containers:
      - name: movie-review-service
        image: poanpan/media-microservices:v1
        command: ["MovieReviewService"]
        resources: 
          requests: 
            cpu: "500m"
            memory: "25Mi"
      restartPolicy: Always
      # schedulerName: poseidon
