mediaMicroservices/k8s-yaml/plot-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plot-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: plot-service
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: media-microsvc
    app-name: plot-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: plot-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: plot-service
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: plot-service
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: plot-service
        OUTPUT: plot-mongodb
        INPUT: nginx-web-server
      name: plot-service
    spec:
      containers:
      - name: plot-service
        image: poanpan/media-microservices-local-jaeger:v0.0.1
        command: ["PlotService"]
        resources: 
          requests: 
            cpu: "10m"
            memory: "13Mi"
      restartPolicy: Always
      # schedulerName: poseidon
