mediaMicroservices/k8s-yaml/rating-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rating-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: rating-service
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: media-microsvc
    app-name: rating-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
  name: rating-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: rating-service
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: rating-service
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: rating-service
        OUTPUT1: compose-review-service
        OUTPUT2: rating-redis
        INPUT: movie-id-service
      name: rating-service
    spec:
      containers:
      - name: rating-service
        image: poanpan/media-microservices:local-jaeger
        command: ["RatingService"]
        resources: 
          requests: 
            cpu: "600m"
            memory: "18Mi"
      restartPolicy: Always
      # schedulerName: poseidon
