mediaMicroservices/k8s-yaml/review-storage-memcached.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: review-storage-memcached
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: review-storage-memcached
spec:
  ports:
  - port: 11211
  selector:
    death-star-project: media-microsvc
    app-name: review-storage-memcached
---
apiVersion: apps/v1
kind: Deployment
metadata:
    #annotations:
    #"sidecar.jaegertracing.io/inject": "true"
  name: review-storage-memcached
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: review-storage-memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: review-storage-memcached
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: review-storage-memcached
      name: review-storage-memcached
    spec:
      containers:
      - name: review-storage-memcached
        image: poanpan/memcached:v1
        resources: 
          requests: 
            cpu: "10m"
            memory: "10Mi"
      restartPolicy: Always
      # schedulerName: poseidon
