mediaMicroservices/k8s-yaml/review-storage-mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: review-storage-mongodb
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: review-storage-mongodb
spec:
  ports:
  - port: 27017
  selector:
    death-star-project: media-microsvc
    app-name: review-storage-mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-storage-mongodb
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: review-storage-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: review-storage-mongodb
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: review-storage-mongodb
        INPUT: review-storage-service
      name: review-storage-mongodb
    spec:
      containers:
      - name: review-storage-mongodb
        image: poanpan/mongo:v1
        resources: 
          requests: 
            cpu: "90m"
            memory: "600Mi"
      restartPolicy: Always
      # schedulerName: poseidon
