mediaMicroservices/k8s-yaml/review-storage-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: review-storage-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: review-storage-service
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: media-microsvc
    app-name: review-storage-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-storage-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: review-storage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: review-storage-service
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: review-storage-service
        OUTPUT: review-storage-mongodb
        INPUT: compose-review-service
      name: review-storage-service
    spec:
      containers:
      - name: review-storage-service
        image: poanpan/media-microservices:v1
        command: ["ReviewStorageService"]
      restartPolicy: Always
      schedulerName: poseidon
