mediaMicroservices/k8s-yaml/text-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: text-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: text-service
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: media-microsvc
    app-name: text-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: text-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: text-service
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: text-service
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: text-service
      name: text-service
    spec:
      containers:
      - name: text-service
        image: poanpan/media-microservices:v1
        command: ["TextService"]
      restartPolicy: Always
