mediaMicroservices/k8s-yaml/unique-id-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unique-id-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: unique-id-service
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: media-microsvc
    app-name: unique-id-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unique-id-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: unique-id-service
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: unique-id-service
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: unique-id-service
        OUTPUT: compose-review-service
        INPUT: nginx-web-server
      name: unique-id-service
    spec:
      containers:
      - name: unique-id-service
        image: poanpan/media-microservices:local-jaeger
        command: ["UniqueIdService"]
        resources: 
          requests: 
            cpu: "150m"
            memory: "15Mi"
      restartPolicy: Always
      # schedulerName: poseidon
