mediaMicroservices/k8s-yaml/user-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: user-service
spec:
  ports:
  - port: 9090
  selector:
    death-star-project: media-microsvc
    app-name: user-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: media-microsvc
  labels:
    death-star-project: media-microsvc
    app-name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      death-star-project: media-microsvc
      app-name: user-service
  template:
    metadata:
      labels: 
        death-star-project: media-microsvc
        app-name: user-service
        OUTPUT1: user-mongodb
        OUTPUT2: compose-review-service
        OUTPUT3: user-memcached
        INPUT: nginx-web-server
      name: user-service
    spec:
      containers:
      - name: user-service
        image: poanpan/media-microservices:v1
        command: ["UserService"]
        resources: 
          requests: 
            cpu: "300m"
            memory: "20Mi"
      restartPolicy: Always
      # schedulerName: poseidon
