mediaMicroservices/k8s-yaml/media-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: media-gateway
  namespace: media-microsvc
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: media-nginx
  namespace: media-microsvc
spec:
  hosts:
  - "*"
  gateways:
  - media-gateway
  http:
  - match:
    - uri:
        exact: /media-nginx
    route:
    - destination:
        host: nginx-web-server.media-microsvc
        port:
          number: 8080
