mediaMicroservices/k8s-yaml/media-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-web-server
  namespace: media-microsvc
spec:
  rules:
  - host: media-nginx.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-web-server
          servicePort: 8080
